# Eris-Cogs

./: .gitignore  LICENSE.txt  README.md  eris_event_lib.py  fishinsult.py  generate_readme.py  info.json  main.py  pyproject.toml
agent/: __init__.py  info.json  main.py
alot/: __init__.py  alot.py  info.json
autoreact/: __init__.py  autoreact.py  info.json
bad_ideas/: __init__.py  bad_ideas.py  info.json
battle/: __init__.py  battle.py  info.json
big_name/: __init__.py  big_name.py  info.json
big_text/: __init__.py  big_text.py  info.json
bluesky_reposter/: __init__.py  bluesky_reposter.py  info.json
boo/: __init__.py  boo.py  info.json
chat/: __init__.py  chat.py  info.json  main.py  pyproject.toml
chat/chatlib/: __init__.py  cog.py  content.py  discord_handling.py  model_querying.py  url_content.py
chat/chatlib/commands/: __init__.py  agent.py  base.py  chat.py  chat_commands.py  images.py  meta.py  pathfinder.py  tarot.py
chat/chatlib/utils/: __init__.py  discord_handling.py  model_querying.py
chat/data/: tarot_guide.txt
clone/: __init__.py  clone.py  info.json
cylon/: __init__.py  cylon.py
dice/: __init__.py  dice.py  info.json
dm_role/: __init__.py  dm_role.py  info.json
dragon/: __init__.py  dragon.py  info.json
emojsplosion/: __init__.py  emojsplosion.py  info.json
event_config/: __init__.py  event_config.py  info.json
event_config /: event_config.py  info.json
events/: __init__.py  events.py  info.json
export_emoji/: __init__.py  export_emoji.py  info.json
facts/: __init__.py  facts.py  info.json
fires/: __init__.py  fires.py  info.json
fishinsult/: __init__.py  fishinsult.py  insult.py
goodbot/: __init__.py  goodbot.py  info.json
grammar/: __init__.py  grammar.py  info.json
haiku/: __init__.py  haiku.py  info.json
hostinfo/: __init__.py  hostinfo.py  info.json
hotel_california/: __init__.py  hotel_california.py  info.json
im_dad/: __init__.py  imdad.py  info.json
imdb_lookup/: __init__.py  imdblookup.py  info.json
insult/: __init__.py  info.json  insult.py
isnt_december_the_best/: __init__.py  december.py  info.json
jolly/: __init__.py  info.json  jolly.py
just_met_her/: __init__.py  info.json  justmether.py
lifslastcall/: __init__.py  info.json  lifs.py
minesweeper/: __init__.py  info.json  minesweeper.py
move/: __init__.py  info.json  move.py
mtg/: __init__.py  info.json  mtg.py
nick_prefix/: __init__.py  info.json  nick_prefix.py
no_fuck_you/: __init__.py  info.json  (+1 more)
(+121 files in other folders)
