[tool.poetry]
name = "eris-cogs"
version = "0.1.0"
description = ""
authors = ["Zoe Farmer <zoe@dataleek.io>"]

[tool.poetry.dependencies]
python = ">=3.8.2,<3.9"
discord = "^1.0.1"
yfinance = "^0.1.55"
matplotlib = "^3.3.3"
Pillow = "^9.0.0"
Red-DiscordBot = "^3.4.5"
mplfinance = "^0.12.7-alpha.5"
twilio = "^6.56.0"
pytz = "^2021.1"
wolframalpha = "^5.0.0"
IMDbPY = "^2021.4.18"
nltk = "^3.6.2"
syllables = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
