[tool.poetry]
name = "eris-cogs"
version = "0.1.0"
description = ""
authors = ["Zoe Farmer <zoe@dataleek.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
discord = "^1.0.1"
yfinance = "^0.1.55"
matplotlib = "^3.3.3"
Pillow = "^8.1.0"
mplfinance = "^0.12.7-alpha.5"
twilio = "^6.56.0"
wolframalpha = "^5.0.0"
IMDbPY = "^2021.4.18"
nltk = "^3.6.2"
syllables = "^0.1.0"
openai = "^0.27.8"
qrcode = "^7.4.2"
red-discordbot = "3.5.5"
apscheduler = "^3.10.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
