[project]
name = "eris-cogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "aiohttp>=3.9.5",
    "apscheduler>=3.11.0",
    "async-lru>=2.0.5",
    "atproto>=0.0.61",
    "beautifulsoup4>=4.13.4",
    "discord>=2.3.2",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "openai>=1.76.2",
    "pillow>=11.2.1",
    "red-discordbot>=3.5.19",
    "rich>=14.0.0",
    "typer>=0.15.3",
]
authors = [{name = "Zoe Farmer", email = "zoe@dataleek.io"}]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['chat']
