[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "beautifulsoup4>=4.13.4",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.5.4",
    "markdownify>=1.1.0",
    "openai>=1.97.1",
    "pillow>=11.2.1",
    "rich>=14.0.0",
]
